add avator api
